[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["ahmadalrasheed <alrasheedahmad97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
sklearn = "^0.0"
jupyterlab = "^3.2.1"
numpy = "1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
